--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ body {
 }
 .main-btn:hover,
 .main-btn:focus {
-  color: var(--color-action);
+  background-color: var(--color-action);
 }
 .visually-hidden {
   position: absolute;
